[package]
name = "winstonjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
